feat(chart-options): 축 제목·눈금·레이아웃 정밀 옵션 추가
X/Y축 제목 위치·간격·회전·오프셋, 눈금 방식(자동/고정 간격)·분할 수·0 포함,
라벨 간격 모드·최소/최대 라벨·겹침 숨김, 막대 폭·간격 % 단위를 계약과 서버
변환기에 추가한다. 그리드 여백은 축 이름 크기를 반영해 동적으로 계산하며,
공유 레이아웃 계약 픽스처와 변환기 회귀 테스트(색상·툴팁·축 전반)를 갱신한다.